2005-04-06  Florian Boor <florian@kernelconcepts.de>

	* gtksimplemenu.c, gpe/gtksimplemenu.h: 
	  Removed obsolete gtk_simple_menu_get_result. Unified some names.
    * gtksimplemenu.c, doc/tmpl/gtksimplemenu.sgml: 
	  Some more documentation and formating fixes.
    * tray.c, doc/tmpl/tray.sgml: Some documentation.
	* Fixed broken documentation.

2005-04-06  Florian Boor <florian@kernelconcepts.de>

    * stylus.c: Documentation, some formating fixes.
    * doc/tmpl/stylus.sgml: Some documentation.

2005-03-31  Florian Boor <florian@kernelconcepts.de>

	* gpeiconlistitem.c, doc/tmpl/gpeiconlistitem.sgml: Documentation.

2005-03-30  Florian Boor <florian@kernelconcepts.de>

	* errorbox.c, picturebutton.c, question.c: Removed inclusion of render.h.

2005-03-18  Florian Boor <florian@kernelconcepts.de>

	* doc/Makefile: Support for documentation in code.
	* gtksimplemenu.c, doc/tmpl/gtksimplemenu.sgml: Some documentaton.

2005-03-17  Florian Boor <florian@kernelconcepts.de>

	* Removed obsolete files, removed obsolete sections from manual.

2005-03-16  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (Popup).

2005-03-14  Florian Boor <florian@kernelconcepts.de>

	* pixmaps.c, popup.c: Fixed some formating.
	* doc/tmpl/*.sgml: More documentation (Pixmaps, Popup).

2005-03-11  Florian Boor <florian@kernelconcepts.de>

	* render.c, gpe/render.h, doc/libgpewidget-render.html: removed (obsolete)
	* Makefile: Update members.

2005-03-09  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (Init, Spacing).
	
2005-03-04  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (Smallbox, Render).

2005-03-03  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/*.sgml: More documentation (Question).

2005-02-14  Florian Boor <florian@kernelconcepts.de>

	* doc/tmpl/i*.sgml: More documentation.

2005-02-13  Florian Boor <florian@kernelconcepts.de>
