@@ -1,10 +1,15 @@
+
+2005-04-08  Florian Boor <florian@kernelconcepts.de>
+
+	* gtksimplemenu.c: Fixed typo.
+
 2005-04-06  Florian Boor <florian@kernelconcepts.de>
 
 	* gtksimplemenu.c, gpe/gtksimplemenu.h: 
 	  Removed obsolete gtk_simple_menu_get_result. Unified some names.
-    * gtksimplemenu.c, doc/tmpl/gtksimplemenu.sgml: 
+	* gtksimplemenu.c, doc/tmpl/gtksimplemenu.sgml: 
 	  Some more documentation and formating fixes.
-    * tray.c, doc/tmpl/tray.sgml: Some documentation.
+	* tray.c, doc/tmpl/tray.sgml: Some documentation.
 	* Fixed broken documentation.
 
 2005-04-06  Florian Boor <florian@kernelconcepts.de>
